# sphinx-hackathon

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  setup_env.sh
raidot_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: AboutSection.css  AboutSection.jsx  AiStatusIndicator.css  AiStatusIndicator.jsx  App.css  App.jsx  CameraFeed.css  CameraFeed.jsx  Header.css  Header.jsx  ProjectSection.css  ProjectSection.jsx  TranslationDisplay.css  TranslationDisplay.jsx  index.css
